--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .social-buttons a:hover { background-color: #30363d; }
         h1 { font-size: 3em; margin: 0.5em 0; text-align: center; width: 100%; }
         .bottom-image { width: 150px; height: 150px; border-radius: 10px; border: 3px solid #30363d; margin: 2em 0; display: block; }
-        .container { display: flex; justify-content: space-between; align-items: stretch; width: 100%; max-width: 800px; margin: 20px auto; position: relative; top: 10%; background-color: #0d1117; padding: 20px; box-sizing: border-box; }
+        .container { display: flex; justify-content: space-between; align-items: stretch; width: 100%; max-width: 800px; margin: 20px auto; position: relative; top: 10%; background-color: #0d1117; padding: 20px; box-sizing: border-box; margin-bottom: 50px; } /* Added margin-bottom here */
         .about-box, .right-box { background-color: #161b22; border-radius: 10px; padding: 15px; border: 1px solid #30363d; color: #a0aab3; width: 48%; box-sizing: border-box; display: grid; grid-template-rows: repeat(3, auto); }
         .about-box p, .right-box p { font-size: 1.2em; font-weight: bold; margin-bottom: 10px; text-align: left; }
         .about-box ul { list-style-type: none; padding-left: 0; font-size: 1.1em; }
@@ -35,7 +35,6 @@
     </div>
     <h1>Welcome to my Bio!</h1>
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Bottom Image" class="bottom-image" />
-    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Look at my builds!</a>
     <div class="container">
         <div class="about-box">
             <p>About me:</p>
@@ -50,5 +49,6 @@
             <div class="row"><p>PL CM - 4.4.24</p></div>
         </div>
     </div>
+    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Look at my builds!</a>
 </body>
 </html>
