--- a/index.html
+++ b/index.html
@@ -6,35 +6,27 @@
     <title>Dev1ss0's Bio</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
-        body { background-color: #0d1117; color: #c9d1d9; font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; height: 100vh; position: relative; }
+        body { background-color: #0d1117; color: #c9d1d9; font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; height: 100vh; }
         .search-bar-container { width: 70%; margin-top: 0.5em; margin-bottom: 1em; display: flex; align-items: center; justify-content: flex-start; }
-        .search-bar { flex-grow: 1; }
-        .search-bar input { width: 100%; padding: 10px; font-size: 1em; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
+        .search-bar input { width: 100%; padding: 10px; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
         .social-buttons { display: flex; gap: 0.5em; margin-left: 1em; }
-        .social-buttons a { text-decoration: none; font-size: 1.5em; color: #c9d1d9; background-color: #161b22; border: 1px solid #30363d; padding: 8px; border-radius: 6px; display: flex; align-items: center; justify-content: center; }
-        .social-buttons a:hover { background-color: #30363d; }
-        h1 { font-size: 3em; margin: 0.5em 0; text-align: center; width: 100%; }
-        .bottom-image { width: 150px; height: 150px; border-radius: 10px; border: 3px solid #30363d; margin: 2em 0; display: block; }
-        .container { display: flex; justify-content: space-between; align-items: stretch; width: 100%; max-width: 800px; margin: 20px auto; position: relative; top: 10%; background-color: #0d1117; padding: 20px; box-sizing: border-box; margin-bottom: 50px; } /* Added margin-bottom here */
-        .about-box, .right-box { background-color: #161b22; border-radius: 10px; padding: 15px; border: 1px solid #30363d; color: #a0aab3; width: 48%; box-sizing: border-box; display: grid; grid-template-rows: repeat(3, auto); }
-        .about-box p, .right-box p { font-size: 1.2em; font-weight: bold; margin-bottom: 10px; text-align: left; }
-        .about-box ul { list-style-type: none; padding-left: 0; font-size: 1.1em; }
-        .about-box li { margin-bottom: 0.5em; font-weight: bold; }
-        .right-box .row { display: flex; align-items: center; font-size: 1.1em; font-weight: bold; margin-bottom: 10px; }
-        .custom-button { background-color: #161b22; color: #c9d1d9; border: 1px solid #30363d; border-radius: 10px; padding: 10px 20px; font-size: 1.2em; text-align: center; width: 100%; max-width: 800px; margin: 40px auto 0; cursor: pointer; text-decoration: none; display: block; }
-        .custom-button:hover { background-color: #30363d; }
+        h1 { font-size: 3em; margin: 0.5em 0; text-align: center; }
+        .bottom-image { width: 150px; height: 150px; border-radius: 10px; border: 3px solid #30363d; margin: 2em 0; }
+        .container { display: flex; justify-content: space-between; width: 100%; max-width: 800px; margin: 20px auto 0; padding: 20px; background-color: #0d1117; box-sizing: border-box; }
+        .about-box, .right-box { background-color: #161b22; border-radius: 10px; padding: 15px; border: 1px solid #30363d; color: #a0aab3; width: 48%; box-sizing: border-box; }
+        .custom-button { background-color: #161b22; color: #c9d1d9; border: 1px solid #30363d; border-radius: 10px; padding: 10px 20px; font-size: 1.2em; text-align: center; width: 80%; max-width: 600px; margin: 50px auto 0; text-decoration: none; }
     </style>
 </head>
 <body>
     <div class="search-bar-container">
         <div class="search-bar"><input type="text" placeholder="Search..."></div>
         <div class="social-buttons">
-            <a href="https://www.youtube.com/@Dev1ss0" target="_blank" title="Visit Dev1ss0's YouTube Channel"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.instagram.com/dev1ss0/" target="_blank" title="Visit Instagram Profile"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@Dev1ss0" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/dev1ss0/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <h1>Welcome to my Bio!</h1>
-    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Bottom Image" class="bottom-image" />
+    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png" alt="Bottom Image" class="bottom-image" />
     <div class="container">
         <div class="about-box">
             <p>About me:</p>
@@ -45,8 +37,8 @@
             </ul>
         </div>
         <div class="right-box">
-            <div class="row"><p>HC S5 - 3.3.24</p></div>
-            <div class="row"><p>PL CM - 4.4.24</p></div>
+            <div><p>HC S5 - 3.3.24</p></div>
+            <div><p>PL CM - 4.4.24</p></div>
         </div>
     </div>
     <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Look at my builds!</a>
