--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
         body { background-color: #0d1117; color: #c9d1d9; font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; height: 100vh; }
         .search-bar-container { width: 70%; margin-top: 0.5em; margin-bottom: 1em; display: flex; align-items: center; justify-content: flex-start; }
-        .search-bar input { width: 100%; padding: 10px; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
+        .search-bar { flex-grow: 1; }
+        .search-bar input { width: 100%; padding: 10px; font-size: 1em; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
         .social-buttons { display: flex; gap: 0.5em; margin-left: 1em; }
+        .social-buttons a { text-decoration: none; font-size: 1.5em; color: #c9d1d9; background-color: #30363d; border: 1px solid #30363d; padding: 8px; border-radius: 6px; display: flex; align-items: center; justify-content: center; }
+        .social-buttons a:hover { background-color: #50575e; }
         h1 { font-size: 3em; margin: 0.5em 0; text-align: center; }
         .bottom-image { width: 150px; height: 150px; border-radius: 10px; border: 3px solid #30363d; margin: 2em 0; }
         .container { display: flex; justify-content: space-between; width: 100%; max-width: 800px; margin: 20px auto 0; padding: 20px; background-color: #0d1117; box-sizing: border-box; }
