--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
         body { background-color: #0d1117; color: #c9d1d9; font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; height: 100vh; }
-        .search-bar-container { width: 70%; margin-top: 0.5em; margin-bottom: 1em; display: flex; align-items: center; justify-content: flex-start; }
+        .search-bar-container { width: 65%; margin-top: 0.5em; margin-bottom: 1em; display: flex; align-items: center; justify-content: flex-start; }
         .search-bar { flex-grow: 1; }
-        .search-bar input { width: 100%; padding: 10px; font-size: 1em; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
+        .search-bar input { width: 100%; padding: 8px; font-size: 0.95em; border: 1px solid #30363d; border-radius: 6px; background-color: #161b22; color: #c9d1d9; }
         .social-buttons { display: flex; gap: 0.5em; margin-left: 1em; }
         .social-buttons a { text-decoration: none; font-size: 1.5em; color: #c9d1d9; background-color: #30363d; border: 1px solid #30363d; padding: 8px; border-radius: 6px; display: flex; align-items: center; justify-content: center; }
         .social-buttons a:hover { background-color: #50575e; }
@@ -17,6 +17,9 @@
         .bottom-image { width: 150px; height: 150px; border-radius: 10px; border: 3px solid #30363d; margin: 2em 0; }
         .container { display: flex; justify-content: space-between; width: 100%; max-width: 800px; margin: 20px auto 0; padding: 20px; background-color: #0d1117; box-sizing: border-box; }
         .about-box, .right-box { background-color: #161b22; border-radius: 10px; padding: 15px; border: 1px solid #30363d; color: #a0aab3; width: 48%; box-sizing: border-box; }
+        .about-box p, .right-box p { font-size: 1.2em; font-weight: bold; margin-bottom: 10px; }
+        .about-box ul, .right-box ul { list-style-type: none; padding-left: 0; font-size: 1.1em; }
+        .about-box li, .right-box li { margin-bottom: 0.5em; font-weight: bold; }
         .custom-button { background-color: #161b22; color: #c9d1d9; border: 1px solid #30363d; border-radius: 10px; padding: 10px 20px; font-size: 1.2em; text-align: center; width: 80%; max-width: 600px; margin: 50px auto 0; text-decoration: none; }
     </style>
 </head>
@@ -40,8 +43,11 @@
             </ul>
         </div>
         <div class="right-box">
-            <div><p>HC S5 - 3.3.24</p></div>
-            <div><p>PL CM - 4.4.24</p></div>
+            <p>HC Worlds:</p>
+            <ul>
+                <li>HC S5 - 3.3.24</li>
+                <li>PL CM - 4.4.24</li>
+            </ul>
         </div>
     </div>
     <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Look at my builds!</a>
