--- a/index.html
+++ b/index.html
@@ -53,3 +53,4 @@
     <a href="https://www.flickr.com/photos/201346365@N08/" target="_blank" class="custom-button">Look at my builds!</a>
 </body>
 </html>
+This is very much WIP, expect things below this :)
