--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
         .about-box ul, .right-box ul { list-style-type: none; padding-left: 0; font-size: 1.1em; }
         .about-box li, .right-box li { margin-bottom: 0.5em; font-weight: bold; }
         .custom-button { background-color: #161b22; color: #c9d1d9; border: 1px solid #30363d; border-radius: 10px; padding: 10px 20px; font-size: 1.2em; text-align: center; width: 80%; max-width: 600px; margin: 50px auto 0; text-decoration: none; }
+        
+        .long-button {
+            background-color: #161b22;
+            color: #c9d1d9;
+            border: 1px solid #30363d;
+            border-radius: 10px;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            text-align: center;
+            width: 100%; /* Full width */
+            max-width: 800px; /* Matches the width of the container */
+            margin: 20px 0; /* Space below the profile picture */
+            text-decoration: none;
+            display: block;
+            text-align: center;
+        }
+
+        .long-button:hover {
+            background-color: #50575e;
+        }
+
     </style>
 </head>
 <body>
@@ -33,6 +54,7 @@
     </div>
     <h1>Welcome to my Bio!</h1>
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png" alt="Bottom Image" class="bottom-image" />
+    <a href="#" class="long-button">Click me!</a> <!-- New button here -->
     <div class="container">
         <div class="about-box">
             <p>About me:</p>
@@ -53,5 +75,3 @@
     <a href="https://www.flickr.com/photos/201346365@N08/" target="_blank" class="custom-button">Look at my builds!</a>
 </body>
 </html>
-‎ 
-This is very much WIP, expect things below this :)
