--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             width: 100%;
             max-width: 800px;
             margin: 20px 0;
+            /* Rounded corners for the entire button container */
             border-radius: 10px;
+            overflow: hidden; /* Ensures rounded corners remain visible */
         }
 
         .split-button a {
-            flex: 1; /* Make the buttons share equal space */
+            flex: 1;
             background-color: #161b22;
             color: #c9d1d9;
             border: 1px solid #30363d;
@@ -40,15 +42,22 @@
             font-size: 1.2em;
             text-align: center;
             text-decoration: none;
-            display: block; /* Ensure the button takes full width */
+            display: block;
+        }
+
+        .left-button {
+            /* Only round the top-left and bottom-left corners for the left button */
+            border-radius: 10px 0 0 10px;
+            border-right: 1px solid #30363d;
+        }
+
+        .right-button {
+            /* Only round the top-right and bottom-right corners for the right button */
+            border-radius: 0 10px 10px 0;
         }
 
         .left-button:hover, .right-button:hover {
             background-color: #50575e;
-        }
-
-        .left-button {
-            border-right: 1px solid #30363d; /* Divider between the two buttons */
         }
     </style>
 </head>
@@ -63,7 +72,7 @@
     <h1>Welcome to my Bio!</h1>
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png" alt="Bottom Image" class="bottom-image" />
     
-    <!-- Split button section -->
+    <!-- Split button section with rounded corners -->
     <div class="split-button">
         <a href="https://discord.gg/pojavlauncher-724163890803638273" class="left-button" target="_blank">Pojavlauncher Discord server</a>
         <a href="https://discord.gg/4ZmhHyyP6W" class="right-button" target="_blank">Friend's Discord server</a>
