updated image website for my own

--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
         </div>
     </div>
     
-    <a href="https://www.flickr.com/photos/201346365@N08/" target="_blank" class="custom-button">Look at my builds!</a>
+    <a href="https://dev1ss0.github.io/ImageWebsite/" target="_blank" class="custom-button">Look at my builds!</a>
 </body>
 </html>
