--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         }
 
         .github-box {
-            background-color: #30363d; /* Gray background for the GitHub box */
-            border-radius: 6px; /* Rounded corners */
-            padding: 8px; /* Padding around the icon */
-            margin-right: 10px; /* Space between the box and search bar */
-            display: flex; /* To center the icon */
-            align-items: center; /* Center vertically */
+            background-color: #30363d;
+            border-radius: 6px;
+            padding: 8px;
+            margin-right: 10px;
+            display: flex;
+            align-items: center;
         }
 
         .github-icon {
-            font-size: 1.5em; /* Adjust size of the icon */
-            color: #c9d1d9; /* Icon color */
+            font-size: 1.5em;
+            color: #c9d1d9;
         }
 
         .search-bar { 
@@ -145,7 +145,7 @@
             text-decoration: none; 
         }
 
-        /* Split button container */
+        
         .split-button {
             display: flex;
             width: 100%;
@@ -201,7 +201,7 @@
         </div>
     </div>
     <h1>Welcome to my Bio!</h1>
-    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png" alt="Bottom Image" class="bottom-image" />
+    <img src="https://github.com/Dev1ss0/bio/blob/main/Images/fe600175c4a642a9d4a00b86760cb989.png?raw=true" alt="Bottom Image" class="bottom-image" />
     
     <!-- Split button section with rounded corners -->
     <div class="split-button">
