updated mergin hopefully

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         h1 { 
-            font-size: 3em; 
+            font-size: 4em; 
             margin: 0.5em 0; 
             text-align: center; 
         }
@@ -96,9 +96,9 @@
         .container { 
             display: flex; 
             justify-content: space-between; 
-            width: 100%; 
+            width: 101%; 
             max-width: 800px; 
-            margin: 20px auto 0; 
+            margin: 5px auto 0; 
             padding: 20px; 
             background-color: #0d1117; 
             box-sizing: border-box; 
@@ -141,7 +141,7 @@
             text-align: center; 
             width: 80%; 
             max-width: 600px; 
-            margin: 50px auto 0; 
+            margin: px auto 0; 
             text-decoration: none; 
         }
 
@@ -160,7 +160,7 @@
             background-color: #161b22;
             color: #c9d1d9;
             border: 1px solid #30363d;
-            padding: 10px;
+            padding: 11px;
             font-size: 1.2em;
             text-align: center;
             text-decoration: none;
