--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     "Creating content is more fun than consuming content."
     
     <div class="split-button">
-        <a href="https://discord.gg/pojavlauncher-724163890803638273" class="left-button" target="_blank">Pojavlauncher Discord server</a>
+        <a href="https://discord.gg/pojavlauncher" class="left-button" target="_blank">Pojavlauncher Discord server</a>
         <a href="https://dev1ss0.github.io/bio/" class="right-button" target="_blank">Soon 👀</a>
     </div>
 
